--- a/index.html
+++ b/index.html
@@ -14,40 +14,19 @@
     <div class="leyend-wrapper">
       <div class="leyend-content">
           <p class="leyend-slogan">Your Commitment</p>
-          <p class="leyend-des">Segundo parrafo molón</p>
-          <p class="leyend-des">Source: Dato de fuentes para la pobreca</p>
+          <p class="leyend-des">Sharing global projects. Now, make a decision to help. It's your time. Your commitment!!!</p>
+          <p class="leyend-des">Source: <a href="http://data.worldbank.org/">The World Data Bank</a>.</p>
           <div class="colors">
-            <div class="color circle range10"></div>
-            <div class="color circle range20"></div>
-            <div class="color circle range30"></div>
-            <div class="color circle range40"></div>
-            <div class="color circle range50"></div>
-            <div class="color circle range60"></div>
-            <div class="color circle range70"></div>
-            <div class="color circle range80"></div>
-            <div class="color circle range90"></div>
-            <div class="color last-circle range100"></div>
+            <div class="color circle range5">5</div>
+            <div class="color circle range10">10</div>
+            <div class="color circle range20">20</div>
+            <div class="color circle range30">30</div>
+            <div class="color circle range40">40</div>
+            <div class="color circle range50">50</div>
+            <div class="color circle range75">75</div>
+            <div class="color last-circle range100">100</div>
             <div class="clear"></div>
           </div>
-          <ul class="range-text">
-            <li class="text text-element">100</li>
-            <li class="text text-element">90</li>
-            <li class="text text-element">80</li>
-            <li class="text text-element">70</li>
-            <li class="text text-element">60</li>
-            <li class="text text-element">50</li>
-            <li class="text text-element">40</li>
-            <li class="text text-element">30</li>
-            <li class="text text-element">20</li>
-            <li class="text text-last">10</li>
-          </ul>
-          <div class="colors">
-            <div class="color circle range0"></div>
-            <div class="clear"></div>
-          </div>
-          <ul class="range-text">
-            <li class="text text-element">No data</li>
-          </ul>
 	 <div><a href="humans.txt"><img src="http://humanstxt.org/img/oficial-logos/humanstxt-transparent-color.png"></a>
       </div>
     </div>
