changed info window, now is by click

--- a/index.html
+++ b/index.html
@@ -27,9 +27,26 @@
             <div class="color last-circle range100">100</div>
             <div class="clear"></div>
           </div>
-	 <div><a href="humans.txt"><img src="http://humanstxt.org/img/oficial-logos/humanstxt-transparent-color.png"></a>
+          <div><a href="humans.txt"><img src="http://humanstxt.org/img/oficial-logos/humanstxt-transparent-color.png"></a>
       </div>
     </div>
+    <div class="country_info_window">
+      <div class="balloon">
+        <div class="country_name"></div>
+        <div class="line"></div>
+        <div class="chart">
+          <div class="percentage_ranking" data-percent="0"><span></span></div>
+          <div class="label">Ranking</div>
+        </div>
+        <div class="chart">
+          <div class="percentage_score" data-percent="0"><span></span></div>
+          <div class="label">Score</div>
+        </div>
+        <div class="clear"></div>
+      </div>
+      <div class="peak"></div>
+    </div>
+
     <script type="text/javascript" src="libs/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="libs/jquery.easy-pie-chart.js"></script>
     <script type="text/javascript" src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
