created list of ngos in the infowindow

--- a/index.html
+++ b/index.html
@@ -34,14 +34,8 @@
       <div class="balloon">
         <div class="country_name"></div>
         <div class="line"></div>
-        <div class="chart">
-          <div class="percentage_ranking" data-percent="0"><span></span></div>
-          <div class="label">Ranking</div>
-        </div>
-        <div class="chart">
-          <div class="percentage_score" data-percent="0"><span></span></div>
-          <div class="label">Score</div>
-        </div>
+        <ul class="ong_list">
+        </ul>
         <div class="clear"></div>
       </div>
       <div class="peak"></div>
@@ -50,6 +44,8 @@
     <script type="text/javascript" src="libs/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="libs/jquery.easy-pie-chart.js"></script>
     <script type="text/javascript" src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+    <script src="js/underscore-1.1.6.js"></script>
+    <script src="http://www.parsecdn.com/js/parse-1.1.15.min.js"></script>
     <script type="text/javascript" src="js/core.js"></script>
   </body>
 </html>
