Cambios de estilo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="map"></div>
     <div class="leyend-wrapper">
       <div class="leyend-content">
+          <div class="logo"></div>
           <p class="leyend-slogan">Your Commitment</p>
           <p class="leyend-des">Sharing global projects. Now, make a decision to help. It's your time. Your commitment!!!</p>
           <p class="leyend-des">Source: <a href="http://data.worldbank.org/">The World Data Bank</a>.</p>
@@ -31,18 +32,22 @@
       </div>
     </div>
     <div class="country_info_window">
-      <div class="balloon">
-        <div class="country_name"></div>
-        <div class="line"></div>
-        <div class="chart">
-          <div class="percentage_ranking" data-percent="0"><span></span></div>
-          <div class="label">Ranking</div>
-        </div>
-        <div class="chart">
-          <div class="percentage_score" data-percent="0"><span></span></div>
-          <div class="label">Score</div>
-        </div>
-        <div class="clear"></div>
+      <div class="box">
+        <h2 class="country_name"></h2>
+        <ul class="ong_list">
+          <li class="ong_name">
+            <a href="#">Nombre de ONG</a>
+          </li>
+          <li class="ong_name">
+            <a href="#">Nombre de ONG</a>
+          </li>
+          <li class="ong_name">
+            <a href="#">Nombre de ONG</a>
+          </li>
+          <li class="ong_name">
+            <a href="#">Nombre de ONG</a>
+          </li>
+        </ul>
       </div>
       <div class="peak"></div>
     </div>
