Cambios en estilos

--- a/ong.html
+++ b/ong.html
@@ -6,34 +6,37 @@
     <script src="js/underscore-1.1.6.js"></script>
     <script src="http://www.parsecdn.com/js/parse-1.1.15.min.js"></script>
     <script type="text/javascript" src="libs/jquery-1.9.0.min.js"></script>    
-
     <script type="text/javascript" src="js/ong.js"></script>
     
     <title>Your commitment</title>
   </head>
-  <body onload="init()">
-    <div class="ong">
-      <div class="logo">
+  <body>
+  <body>
+      <div class="leyend-ong">
+        <div class="leyend-content">
+            <div class="logo"></div>
+        </div>
       </div>
-      <div class="ongname">
-      </div>
-      <div class="ongdescription">
-      </div>
-      <div class="map">
-        <!-- country code -->
-      </div>
+      <div class="ong_wrapper">
+        <div class="ong">
+          <div class="logo_ong"></div>
+          <div class="ongname">
+            <h2>Nombre ONG</h2>
+          </div>
+          <div class="ongdescription">
+          </div>
+          <div class="map">
+            <!-- country code -->
+          </div>
 
-      <div class="projects">
-        <h2>PROYECTOS</h2>
-        <div class="name"></div>
-        <div class="description"></div>
-        <div class="donations"></div>
-        <div class="budget"></div>
+          <div class="projects">
+            <h2>PROYECTOS</h2>
+            <div class="name"></div>
+            <div class="description"></div>
+            <div class="donations"></div>
+            <div class="budget"></div>
+          </div>
+        </div>
       </div>
-    </div>
-    
-   
-    </div>
-
   </body>
 </html>
