--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="leyend-wrapper">
       <div class="leyend-content">
           <div class="logo"></div>
-          <p class="leyend-slogan">Your Commitment</p>
+          <p class="leyend-slogan">What is your commitment?</p>
           <p class="leyend-des">Sharing global projects. Now, make a decision to help. It's your time. Your commitment!!!</p>
           <p class="leyend-des">Source: <a href="http://data.worldbank.org/">The World Data Bank</a>.</p>
           <div class="colors">
-            <div class="color circle range5">5</div>
-            <div class="color circle range10">10</div>
-            <div class="color circle range20">20</div>
-            <div class="color circle range30">30</div>
-            <div class="color circle range40">40</div>
-            <div class="color circle range50">50</div>
-            <div class="color circle range75">75</div>
-            <div class="color last-circle range100">100</div>
+            <div class="circle range5">5</div>
+            <div class="circle range10">10</div>
+            <div class="circle range20">20</div>
+            <div class="circle range30">30</div>
+            <div class="circle range40">40</div>
+            <div class="circle range50">50</div>
+            <div class="circle range75">75</div>
+            <div class="last-circle range100">100</div>
             <div class="clear"></div>
           </div>
           <div><a href="humans.txt"><img src="http://humanstxt.org/img/oficial-logos/humanstxt-transparent-color.png"></a>
@@ -37,6 +37,7 @@
         <ul class="ong_list">
         </ul>
       </div>
+      <div class="close"></div>
       <div class="peak"></div>
     </div>
 
