--- a/ong.html
+++ b/ong.html
@@ -12,25 +12,35 @@
   </head>
   <body>
   <body>
-      <div class="leyend-ong">
+    <div class="wrapper">
+      <div class="columna_izq">
         <div class="leyend-content">
-            <div class="logo"></div>
+            <a href="#">
+              <div class="logo"></div>
+            </a>
         </div>
+        <div class="logo_ong"></div>
       </div>
-      <div class="ong_wrapper">
+      <div class="columna_drch">
         <div class="ong">
-          <div class="logo_ong"></div>
-          <div class="ongname">
+          <div class="titulo ongname">
             <h2>Nombre ONG</h2>
           </div>
-          <div class="ongdescription">
+          <div class="titulo ongdescription">
+            <h2>Descripcion ONG</h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
           </div>
-          <div class="map">
+          <div class="contentDescription"></div>
+          <div class="titulo map">
+            <h2>Mapa ONG</h2>
+          </div>
+          <div class="contentMap"></div>
+          <div class="titulo">
             <!-- country code -->
+            <h2>Proyectos</h2>
           </div>
 
-          <div class="projects">
-            <h2>PROYECTOS</h2>
+          <div class="contentProjects">
             <div class="name"></div>
             <div class="description"></div>
             <div class="donations"></div>
@@ -38,5 +48,6 @@
           </div>
         </div>
       </div>
+    </div>
   </body>
 </html>
